--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <div id="container">
-
     </div>
-
-    <div id="button"></div>
+    <div class="button">PLAYER 1</div>
+    <br>
+    <div id="container2">
+    </div>
+    <div class="button">PLAYER 2</div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
   <script src="javascript.js" type="text/javascript"></script>
