--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <title>title</title>
   <link rel="stylesheet" href="style.css" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Karla:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
   </head>
   <body>
+    <div id="alignment">
     <div id="container">
     </div>
-    <div class="button">PLAYER 1</div>
-    <br>
+    <!-- <div class="button" id="button1"></div> -->
     <div id="container2">
     </div>
-    <div class="button">PLAYER 2</div>
+    <!-- <div class="button" id="button2"></div> -->
+    <div id="timer"></div>
+    <p>asd VS jkl</p>
+    </div>
+
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
   <script src="javascript.js" type="text/javascript"></script>
