added gamestart working on reset

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div id="alignment">
     <div id="container">
     </div>
-    <!-- <div class="button" id="button1"></div> -->
+    <div class="button" id="button1"></div>
     <div id="container2">
     </div>
-    <!-- <div class="button" id="button2"></div> -->
+    <div class="button" id="button2"></div>
     <div id="timer"></div>
     <p>asd VS jkl</p>
     </div>
